Fixing workflow files - Adding Tag

--- a/.github/workflows/build-andriod-apk.yml
+++ b/.github/workflows/build-andriod-apk.yml
@@ -3,8 +3,8 @@ name: Flutter Build and Upload Android APK
 on:
   push:                 # This is the condition that the action will run on
     branches: [ main ]  # In this case when you push your code into GitHub
-    tags:
-    - "v*.*.*"          # In this case when you tag your commit with v1.0.0 for example
+    # tags:
+    # - "v*.*.*"          # In this case when you tag your commit with v1.0.0 for example
 
 jobs:
   build:
@@ -28,6 +28,17 @@ jobs:
 
       #- name: Decode android/key.properties
       #  run: echo "${{ secrets.KEY_PROPERTIES_PROD }}" | base64 --decode > android/key.properties
+
+      - uses: olegtarasov/get-tag@v2 # that generate $GIT_TAG_NAME env
+        id: tagName
+        with:
+          tagRegex: 'internal-v([0-9]+.[0-9]+.[0-9]+\+[0-9]+)' # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
+          tagRegexGroup: 1 # Optional. Default is 1.
+
+      - name: Replace YAML version with tag version
+        run: |
+          sed -i 's/99.99.99+99/'$GIT_TAG_NAME'/g' pubspec.yaml|
+          echo "Tag used version:"$GIT_TAG_NAME
 
       - name: Install Flutter               # Install Flutter
         uses: subosito/flutter-action@v2
