--- a/.github/workflows/build-ios-ipa.yml
+++ b/.github/workflows/build-ios-ipa.yml
@@ -1,9 +1,12 @@
-name: Flutter Build and Upload iOS ipa
+name: Flutter Build and Upload iOS IPA
 on: workflow_dispatch
     
 jobs:
   build:
     runs-on: macos-latest
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3     # Checkout the Repository on the Virtual Machine
