--- a/.github/workflows/build-andriod-apk.yml
+++ b/.github/workflows/build-andriod-apk.yml
@@ -35,13 +35,14 @@ jobs:
         uses: mikefarah/yq@v4.42.1
 
       - name: Get pubspec version
+        id: get_flutter_app_version
         run: |
           version=$(yq .version | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' pubspec.yaml | head -n 1)
           echo "## v$version"  # This line outputs the version for debugging (optional)
   
       - name: Create git tag
         run: |
-          git tag "v${version}"
+          git tag "v${{ steps.get_flutter_app_version.outputs.VERSION }}"
 
       - name: Install Flutter               # Install Flutter
         uses: subosito/flutter-action@v2
@@ -73,7 +74,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/bundle/release/*.aab,build/app/outputs/flutter-apk/*.apk"
-          tag: "v${version}"
+          tag: "v${{ steps.get_flutter_app_version.outputs.VERSION }}"
           # token: ${{ secrets.PERSONAL_RELEASE_TOKEN }}
 
   # TODO:  Upload to Firebase - for App Distribution
