--- a/.github/workflows/build-andriod-apk.yml
+++ b/.github/workflows/build-andriod-apk.yml
@@ -37,12 +37,12 @@ jobs:
       - name: Get pubspec version
         id: get_flutter_app_version
         run: |
-          version=$(yq .version | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' pubspec.yaml | head -n 1)
-          echo "## v$version"  # This line outputs the version for debugging (optional)
+          VERSION=$(yq .version | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' pubspec.yaml | head -n 1)
+          echo "TAG_VERSION=$(VERSION)" >> $GITHUB_OUTPUT
   
       - name: Create git tag
         run: |
-          git tag "v${{ steps.get_flutter_app_version.outputs.version }}"
+          git tag "v${{ steps.get_flutter_app_version.outputs.TAG_VERSION }}"
 
       - name: Install Flutter               # Install Flutter
         uses: subosito/flutter-action@v2
@@ -74,7 +74,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/bundle/release/*.aab,build/app/outputs/flutter-apk/*.apk"
-          tag: "v${{ steps.get_flutter_app_version.outputs.VERSION }}"
+          tag: "v${{ steps.get_flutter_app_version.outputs.TAG_VERSION }}"
           # token: ${{ secrets.PERSONAL_RELEASE_TOKEN }}
 
   # TODO:  Upload to Firebase - for App Distribution
