--- a/.github/workflows/build-andriod-apk.yml
+++ b/.github/workflows/build-andriod-apk.yml
@@ -38,7 +38,7 @@ jobs:
         id: get_flutter_app_version
         run: |
           VERSION=$(yq .version | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' pubspec.yaml | head -n 1)
-          echo "TAG_VERSION=$(VERSION)" >> $GITHUB_OUTPUT
+          echo "TAG_VERSION=$VERSION" >> $GITHUB_OUTPUT
   
       - name: Create git tag
         run: |
@@ -67,7 +67,7 @@ jobs:
       - name: Save APPBUNDLE to Artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: APPBUNDLE
+          name: flutter-appbundle
           path: build/app/outputs/bundle/release/*.aab
 
       - name: Create Github Release
@@ -78,29 +78,29 @@ jobs:
           # token: ${{ secrets.PERSONAL_RELEASE_TOKEN }}
 
   # TODO:  Upload to Firebase - for App Distribution
-  # Release job, upload the ipa to Firebase App Distribution
+  # Release job, upload the apk or aab to Firebase App Distribution
   # release:
-  #   name: Release APK to Firebase
+  #   name: Sends Release APK to Firebase
   #   needs: [ build ]
   #   runs-on: ubuntu-latest
   #   steps:
     
-  #   # Retrieve ipa file from GitHub artifacts
+  #   # Retrieve apk file from GitHub artifacts
   #   - uses: actions/checkout@v3
   #   - name: Get flutter-apk from artifacts
   #     uses: actions/download-artifact@v3
   #     with:
   #       name: flutter-apk
   #  OR
-  #       name: APPBUNDLE
+  #       name: flutter-appbundle
 
-  #   # Upload ipa file to Firebase
+  #   # Upload apk file to Firebase
   #   - name: Upload artifact to Firebase App Distribution
   #     uses: wzieba/Firebase-Distribution-Github-Action@v1
   #     with:
   #       appId: ${{secrets.FIREBASE_IOS_APP_ID}}
   #       serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
-  #       groups: ios-developers
+  #       groups: android-developers
   #       file: ${{secrets.APP_NAME}}.apk
   #  OR
   #       file: ${{secrets.APP_NAME}}.aab
