--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,16 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def fminSdkVersion = localProperties.getProperty('flutter.minSdkVersion')
+if (fminSdkVersion == null) {
+    fminSdkVersion = '21'
+}
+
+def ftargetSdkVersion = localProperties.getProperty('flutter.targetSdkVersion')
+if (ftargetSdkVersion == null) {
+    ftargetSdkVersion = '31'
+}
+
 android {
     namespace "dev.sjg.mqtt_tool"
     compileSdk flutter.compileSdkVersion
@@ -47,8 +57,8 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk flutter.minSdkVersion
         targetSdk flutter.targetSdkVersion
-        minSdkVersion localProperties.getProperty('flutter.minSdkVersion').toInteger() 
-        targetSdkVersion localProperties.getProperty('flutter.targetSdkVersion').toInteger() 
+        minSdkVersion fminSdkVersion
+        targetSdkVersion ftargetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
